--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
-# Requirements for running notebooks
--e .
-
-# For running tests
-# nose
-
-# For neural network examples
-# keras
-# tensorflow
-# torch
-# torchvision
-# transformers
-
-# For decision tree examples
-# xgboost
-# catboost
-# lightgbm
-# transformers 4.38.0.dev0
-# torch 2.1.0
+catboost==1.2.2
+cloudpickle==3.0.0
+dill==0.3.8
+ipython==8.19.0
+lightgbm==4.3.0
+lime==0.2.0.1
+matplotlib==3.8.2
+numba==0.58.1
+numpy==1.26.4
+packaging==23.2
+pandas==2.2.0
+pyod==1.1.3
+pyspark==3.5.0
+pytest==8.0.0
+scikit_learn==1.3.2
+scipy==1.12.0
+setuptools==68.2.2
+shap==0.44.0
+shap2==0.42.0
+slicer==0.0.7
+spacy==3.7.2
+tensorflow==2.15.0.post1
+tokenizers==0.15.1
+torch==2.1.2
+tqdm==4.66.1
+xgboost==2.0.3
