--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+actions==1.0.3
 catboost==1.2.2
 cloudpickle==3.0.0
 dill==0.3.8
@@ -5,22 +6,22 @@ ipython==8.19.0
 lightgbm==4.3.0
 lime==0.2.0.1
 matplotlib==3.8.2
-numba==0.58.1
+numba==0.59.1
 numpy==1.26.4
 packaging==23.2
-pandas==2.2.0
+pandas==2.2.1
 pyod==1.1.3
 pyspark==3.5.0
 pytest==8.0.0
-scikit_learn==1.3.2
+scikit_learn==1.4.1.post1
 scipy==1.12.0
 setuptools==68.2.2
-shap==0.44.0
+shap==0.45.0
 shap2==0.42.0
-slicer==0.0.7
-spacy==3.7.2
-tensorflow==2.15.0.post1
-tokenizers==0.15.1
-torch==2.1.2
-tqdm==4.66.1
+slicer==0.0.8
+spacy==3.7.4
+tensorflow==2.16.1
+tokenizers==0.15.2
+torch==2.2.1
+tqdm==4.66.2
 xgboost==2.0.3
