--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@ catboost_info
 node_modules
 /clutils/*
 /models/*
-<<<<<<< HEAD
 /config/*
-=======
->>>>>>> 4bf2fb482258c4d7f043828d63793a7da3f284ca
+setup.cfg
+pyproject.toml
